docs: helper text update

--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -206,7 +206,7 @@ The calendar itself will always remain a fixed width and is not adjustable. It s
 #### Date format
 
 - The date format can be displayed differently depending on your location. For example, some countries use month/day/year while other use day/month/year.
-- When using a simple date input include the date format in parentheses inline with the label or as help text below the label.
+- When using a simple date input include the date format in parentheses inline with the label or as helper text below the label.
 - When using calendar picker the date format will be automated if the user selects from the calendar menu.
 - Only including the date format as placeholder text inside the field is problematic because it will disappear from view once the user begins typing.
 
