--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -46,7 +46,7 @@ Inputs come in two different colors. The default input color is `$field-01` and 
 
 **Active:** Placeholder text should remain when the user clicks into the text input and gets a cursor. Once the user starts typing, the hint text is replaced with the user input text.
 
-**Help text:** Help text appears below the label when the input is active. Help text remains visible while the input is focused and disappears after focus away.
+**Helper text:** Helper text appears below the label when the input is active. Helper text remains visible while the input is focused and disappears after focus away.
 
 **Error:** Error messages appear below the input field and are always present while invalid.
 
