--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -169,7 +169,7 @@ There are three different types of dropdowns that support various kinds of funct
 
 ### Anatomy
 
-Dropdowns are composed of four distinct sections—assistive text like labels or help text, a field, a menu, and options contained within the menu. Labels and help text are optional but can guide the user to make an informed decision when making a selection.
+Dropdowns are composed of four distinct sections—assistive text like labels or helper text, a field, a menu, and options contained within the menu. Labels and helper text are optional but can guide the user to make an informed decision when making a selection.
 
 <Row>
 <Column colLg={8}>
@@ -179,7 +179,7 @@ Dropdowns are composed of four distinct sections—assistive text like labels or
 </Column>
 </Row>
 
-1. **Labels and help text (optional):** Assistive text to help the user make a selection.
+1. **Labels and helper text (optional):** Assistive text to help the user make a selection.
 2. **Field:** Persists when the dropdown is open or closed.
 3. **Option:** A list of multiple options to select from within a menu.
 4. **Menu:** Displayed as an open state and contains a list of options to select from.
@@ -244,16 +244,16 @@ Field containers should vertically align to the grid and with other form compone
 - Labels inform users what to expect in the list of dropdown options.
 - Keep the label short and concise by limiting it to a single line of text.
 
-#### Help text
+#### Helper text
 
-- Help text is pertinent information that assists the user in choosing the right selection from the dropdown menu.
-- Help text is always available when the dropdown field is focused and appears underneath the label.
+- Helper text is pertinent information that assists the user in choosing the right selection from the dropdown menu.
+- Helper text is always available when the dropdown field is focused and appears underneath the label.
 - Use sentence-style capitalization and write the text as full sentences with punctuation, unless space is limited.
 
 <Row>
 <Column colLg={8}>
 
-![Dropdown assistive labels, help text or none.](images/dropdown-usage-5.png)
+![Dropdown assistive labels, helerp text or none.](images/dropdown-usage-5.png)
 
 </Column>
 </Row>
@@ -380,7 +380,7 @@ Users trigger a dropdown menu to open by clicking the chevron icon or clicking a
 
 #### Screen readers
 
-- Labels must be announced to the screen reader on focus. Ensure the help text that appears under an input is read when an assistive technology user stops at an input using ARIA.
+- Labels must be announced to the screen reader on focus. Ensure the helper text that appears under an input is read when an assistive technology user stops at an input using ARIA.
 - VoiceOver: Users can trigger a state change by pressing `Control-Option-Space` or `Space` while the dropdown field has screen reader focus.
 - JAWS: Users can trigger a state change by pressing `Space` while the dropdown field has screen reader focus.
 - NVDA: Users can trigger a state change by pressing `Space` while the dropdown field has screen reader focus.
