--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -116,7 +116,7 @@ All forms are comprised of six elements:
 
 - **Labels:** Inform users what the corresponding input fields mean.
 - **Input fields:** Enable users to provide information. Information can be entered through a variety of different input fields ranging from text fields, checkboxes, and many other types.
-- **Help text:** Provides assistance on how to fill out a field. Help text is optional.
+- **Helper text:** Provides assistance on how to fill out a field. Helper text is optional.
 - **Placeholder text:** Hints at what goes into a field. Placeholder text is optional.
 - **Actions:** Allow users to submit a form.
 - **Validation:** Ensures the data submitted by the user conforms to acceptable parameters.
@@ -194,9 +194,9 @@ Effective form labeling helps users understand what information to enter into a 
 
 Where possible, add programmatic assistance. Detect and pre-fill inputs to reduce errors and save time. When the software can't determine the value that belongs in an input, use type-ahead to make suggestions. Use sentence-case for default values, detected values, and auto-completion text.
 
-### Help text
+### Helper text
 
-Help text is pertinent information that assists the user in completing a field. Help text is always available when the input is focused and appears underneath the label. Use sentence-style capitalization, and in most cases, write the text as full sentences with punctuation.
+Helper text is pertinent information that assists the user in completing a field. Helper text is always available when the input is focused and appears underneath the label. Use sentence-style capitalization, and in most cases, write the text as full sentences with punctuation.
 
 ### Placeholder text
 
