--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -40,7 +40,7 @@ Inputs come in two different colors. The default input color is `$field-01` and 
 
 **Active:** Number input should have a default number to start. The input should never be empty.
 
-**Help text:** Help text appears below the label when the input is active. Help text remains visible while the input is focused and disappears after focus away.
+**Helper text:** Helper text appears below the label when the input is active. Helper text remains visible while the input is focused and disappears after focus away.
 
 **Error:** Error messages appear below the input field and are always present while invalid.
 
