--- a/src/pages/components/text-input/usage.mdx
+++ b/src/pages/components/text-input/usage.mdx
@@ -189,14 +189,14 @@ Placeholder text provides hints or examples of what to enter. Placeholder text d
 </Column>
 </Row>
 
-### Help text
+### Helper text
 
-Help text is pertinent information that assists the user in completing a field. Help text is always available when the input is focused and appears underneath the label. Use sentence-style capitalization, and in most cases, write the text as full sentences with punctuation.
+Helper text is pertinent information that assists the user in completing a field. Helper text is always available when the input is focused and appears underneath the label. Use sentence-style capitalization, and in most cases, write the text as full sentences with punctuation.
 
 <Row>
 <Column colLg={8}>
 
-![Help text example](images/text-input-usage-3.png)
+![Helper text example](images/text-input-usage-3.png)
 
 </Column>
 </Row>
