--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -253,7 +253,7 @@ Field containers should vertically align to the grid and with other form compone
 <Row>
 <Column colLg={8}>
 
-![Dropdown assistive labels, helerp text or none.](images/dropdown-usage-5.png)
+![Dropdown assistive labels, helper text or none.](images/dropdown-usage-5.png)
 
 </Column>
 </Row>
