--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -589,16 +589,10 @@ This is the gutter scenario that requires the most explanation. Although it's ca
 
 Rows that are adjacent will have 16px of margin between them to match gutter. Use vertical helpers here.
 
-<InlineNotification>
-
-**Note:** Code for the Narrow grid mode is currently using an outdated naming convention. We've disabled the attached code snippet until the class name can be updated to avoid confusion.
-
-</InlineNotification>
-
 <Row>
   <Column noGutterSm>
     <div className="grid-demo grid-demo--narrow">
-      <div class="bx-demo--grid">
+      <div class="bx-demo--grid bx-demo--grid--narrow">
         <div class="bx-demo--row">
           <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
           <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
@@ -607,6 +601,17 @@ Rows that are adjacent will have 16px of margin between them to match gutter. Us
         </div>
       </div>
     </div>
+
+```html
+<div class="bx--grid bx--grid--narrow">
+  <div class="bx--row">
+    <div class="bx--col"></div>
+    <div class="bx--col"></div>
+    <div class="bx--col"></div>
+    <div class="bx--col"></div>
+  </div>
+</div>
+```
 
   </Column>
 </Row>
