docs: add note around when code was added for narrow

--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -589,15 +589,21 @@ This is the gutter scenario that requires the most explanation. Although it's ca
 
 Rows that are adjacent will have 16px of margin between them to match gutter. Use vertical helpers here.
 
+<InlineNotification>
+
+**Note:** Code for the Narrow grid mode was added in [v10.17.0](https://github.com/carbon-design-system/carbon/releases/tag/v10.17.0)
+
+</InlineNotification>
+
 <Row>
   <Column noGutterSm>
     <div className="grid-demo grid-demo--narrow">
       <div class="bx-demo--grid bx-demo--grid--narrow">
         <div class="bx-demo--row">
-          <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
+          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
+          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
+          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
+          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
         </div>
       </div>
     </div>
