Docs: demo content fixes

--- a/src/pages/components/date-picker/code.mdx
+++ b/src/pages/components/date-picker/code.mdx
@@ -35,7 +35,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
       <DatePickerInput
         id="date-picker-default-id"
         placeholder="mm/dd/yyyy"
-        labelText="Date Picker label"
+        labelText="Date picker label"
         type="text"
       />
     </DatePicker>
@@ -56,7 +56,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
       <DatePickerInput
         id="date-picker-calendar-id"
         placeholder="mm/dd/yyyy"
-        labelText="Date Picker label"
+        labelText="Date picker label"
         type="text"
       />
     </DatePicker>
@@ -77,13 +77,13 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
       <DatePickerInput
         id="date-picker-range-start"
         placeholder="mm/dd/yyyy"
-        labelText="Date Picker label"
+        labelText="Date picker label"
         type="text"
       />
       <DatePickerInput
         id="date-picker-range-end"
         placeholder="mm/dd/yyyy"
-        labelText="Date Picker label"
+        labelText="Date picker label"
         type="text"
       />
     </DatePicker>
