--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -74,7 +74,7 @@ Use date and time pickers when you are asking the user for a time or date, or fo
       <DatePickerInput
         id="date-picker-default-id"
         placeholder="mm/dd/yyyy"
-        labelText="Date Picker label"
+        labelText="Date picker label"
         type="text"
       />
     </DatePicker>
@@ -95,7 +95,7 @@ Use date and time pickers when you are asking the user for a time or date, or fo
       <DatePickerInput
         id="date-picker-calendar-id"
         placeholder="mm/dd/yyyy"
-        labelText="Date Picker label"
+        labelText="Date picker label"
         type="text"
       />
     </DatePicker>
@@ -116,13 +116,13 @@ Use date and time pickers when you are asking the user for a time or date, or fo
       <DatePickerInput
         id="date-picker-range-start"
         placeholder="mm/dd/yyyy"
-        labelText="Date Picker label"
+        labelText="Date picker label"
         type="text"
       />
       <DatePickerInput
         id="date-picker-range-end"
         placeholder="mm/dd/yyyy"
-        labelText="Date Picker label"
+        labelText="Date picker label"
         type="text"
       />
     </DatePicker>
