--- a/src/pages/components/dropdown/code.mdx
+++ b/src/pages/components/dropdown/code.mdx
@@ -14,7 +14,7 @@ import items from "../../../data/components/dropdown.js";
     },
     {
       id: "combo-box",
-      label: "Combo box",
+      label: "Combobox",
     },
     {
       id: "multiselect",
@@ -47,7 +47,7 @@ import items from "../../../data/components/dropdown.js";
       id="carbon-dropdown-example"
       items={items}
       label="Dropdown menu options"
-      titleText="This is a dropdown title."
+      titleText="Dropdown title"
     />
   `}</ComponentVariant>
   <ComponentVariant
@@ -69,8 +69,8 @@ import items from "../../../data/components/dropdown.js";
       ariaLabel="ComboBox"
       id="carbon-combobox-example"
       items={items}
-      label="ComboBox menu options"
-      titleText="This is a dropdown title."
+      label="Combobox menu options"
+      titleText="Combobox title"
     />
   `}</ComponentVariant>
   <ComponentVariant
@@ -92,8 +92,8 @@ import items from "../../../data/components/dropdown.js";
       ariaLabel="MultiSelect"
       id="carbon-multiselect-example"
       items={items}
-      label="MultiSelect menu options"
-      titleText="This is a dropdown title."
+      label="Multiselect menu options"
+      titleText="Multiselect title"
     />
   `}</ComponentVariant>
   <ComponentVariant
@@ -112,8 +112,8 @@ import items from "../../../data/components/dropdown.js";
       ariaLabel="Filterable MultiSelect"
       id="carbon--filterable-multiselect-example"
       items={items}
-      label="Filterable MultiSelect options"
-      titleText="This is a MultiSelect title."
+      label="Filterable multiselect options"
+      titleText="Filterable multiselect title"
     />
  `}</ComponentVariant>
 </ComponentDemo>
