--- a/src/pages/components/list/code.mdx
+++ b/src/pages/components/list/code.mdx
@@ -30,24 +30,24 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
   >{`
     <OrderedList>
       <ListItem>
-        Ordered List level 1
+        Ordered list level 1
       </ListItem>
       <ListItem>
-        Ordered List level 1
+        Ordered list level 1
         <OrderedList nested>
           <ListItem>
-            Ordered List level 2
+            Ordered list level 2
           </ListItem>
           <ListItem>
-            Ordered List level 2
+            Ordered list level 2
           </ListItem>
           <ListItem>
-            Ordered List level 2
+            Ordered list level 2
           </ListItem>
         </OrderedList>
       </ListItem>
       <ListItem>
-        Ordered List level 1
+        Ordered list level 1
       </ListItem>
     </OrderedList>
   `}</ComponentVariant>
@@ -65,24 +65,24 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
   >{`
       <UnorderedList>
         <ListItem>
-          Unordered List level 1
+          Unordered list level 1
         </ListItem>
         <ListItem>
-          Unordered List level 1
+          Unordered list level 1
           <UnorderedList nested>
             <ListItem>
-              Unordered List level 2
+              Unordered list level 2
             </ListItem>
             <ListItem>
-              Unordered List level 2
+              Unordered list level 2
             </ListItem>
             <ListItem>
-              Unordered List level 2
+              Unordered list level 2
             </ListItem>
           </UnorderedList>
         </ListItem>
         <ListItem>
-          Unordered List level 1
+          Unordered list level 1
         </ListItem>
       </UnorderedList>
   `}</ComponentVariant>
