--- a/src/pages/components/list/usage.mdx
+++ b/src/pages/components/list/usage.mdx
@@ -56,24 +56,24 @@ Use numbered lists when you need to convey a priority, hierarchy, or sequence be
   >{`
     <OrderedList>
       <ListItem>
-        Ordered List level 1
+        Ordered list level 1
       </ListItem>
       <ListItem>
-        Ordered List level 1
+        Ordered list level 1
         <OrderedList nested>
           <ListItem>
-            Ordered List level 2
+            Ordered list level 2
           </ListItem>
           <ListItem>
-            Ordered List level 2
+            Ordered list level 2
           </ListItem>
           <ListItem>
-            Ordered List level 2
+            Ordered list level 2
           </ListItem>
         </OrderedList>
       </ListItem>
       <ListItem>
-        Ordered List level 1
+        Ordered list level 1
       </ListItem>
     </OrderedList>
   `}</ComponentVariant>
@@ -91,24 +91,24 @@ Use numbered lists when you need to convey a priority, hierarchy, or sequence be
   >{`
       <UnorderedList>
         <ListItem>
-          Unordered List level 1
+          Unordered list level 1
         </ListItem>
         <ListItem>
-          Unordered List level 1
+          Unordered list level 1
           <UnorderedList nested>
             <ListItem>
-              Unordered List level 2
+              Unordered list level 2
             </ListItem>
             <ListItem>
-              Unordered List level 2
+              Unordered list level 2
             </ListItem>
             <ListItem>
-              Unordered List level 2
+              Unordered list level 2
             </ListItem>
           </UnorderedList>
         </ListItem>
         <ListItem>
-          Unordered List level 1
+          Unordered list level 1
         </ListItem>
       </UnorderedList>
   `}</ComponentVariant>
