--- a/src/pages/components/number-input/code.mdx
+++ b/src/pages/components/number-input/code.mdx
@@ -29,10 +29,10 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
     }}
   >{`
     <NumberInput
-      helperText="Optional helper text."
+      helperText="Optional helper text"
       id="tj-input"
       invalidText="Number is not valid"
-      label="Number Input label"
+      label="Number input label"
       max={100}
       min={0}
       step={10}
@@ -53,10 +53,10 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
   >{`
         <NumberInput
           isMobile
-          helperText="Optional helper text."
+          helperText="Optional helper text"
           id="tj-input"
           invalidText="Number is not valid"
-          label="Number Input label"
+          label="Number input label"
           max={100}
           min={0}
           step={10}
