--- a/src/pages/components/radio-button/code.mdx
+++ b/src/pages/components/radio-button/code.mdx
@@ -28,7 +28,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
     }}
   >{`
   <FormGroup
-  legendText="Radio Button heading"
+  legendText="Radio button heading"
 >
   <RadioButtonGroup
     defaultSelected="default-selected"
