--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -50,7 +50,7 @@ Radio buttons represent a group of mutually exclusive choices, compared to check
     }}
   >{`
   <FormGroup
-  legendText="Radio Button heading"
+  legendText="Radio button heading"
 >
   <RadioButtonGroup
     defaultSelected="default-selected"
