--- a/src/pages/components/select/code.mdx
+++ b/src/pages/components/select/code.mdx
@@ -31,7 +31,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
   >{`
 <Select
   defaultValue="placeholder-item"
-  helperText="Optional helper text."
+  helperText="Optional helper text"
   id="select-1"
   invalidText="A valid value is required"
   labelText="Select"
