--- a/src/pages/components/select/usage.mdx
+++ b/src/pages/components/select/usage.mdx
@@ -63,7 +63,7 @@ Another important difference between the two components is the underlying code. 
   >{`
 <Select
   defaultValue="placeholder-item"
-  helperText="Optional helper text."
+  helperText="Optional helper text"
   id="select-1"
   invalidText="A valid value is required"
   labelText="Select"
