--- a/src/pages/components/text-input/code.mdx
+++ b/src/pages/components/text-input/code.mdx
@@ -37,10 +37,10 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
   >{`
     <FormGroup>
       <TextInput
-        helperText="Optional helper text."
+        helperText="Optional helper text"
         id="test2"
         invalidText="A valid value is required"
-        labelText="Text Input label"
+        labelText="Text input label"
         placeholder="Placeholder text"
       />
     </FormGroup>
@@ -59,11 +59,11 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
   >{`
     <FormGroup>
     <TextInput.PasswordInput
-      helperText="Optional helper text."
+      helperText="Optional helper text"
       hidePasswordLabel="Hide password"
       id="test2"
       invalidText="A valid value is required"
-      labelText="Text Input label"
+      labelText="Text input label"
       placeholder="Placeholder text"
       showPasswordLabel="Show password"
     />
@@ -87,11 +87,11 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
     <FormGroup>
     <TextArea
       cols={50}
-      helperText="Optional helper text."
+      helperText="Optional helper text"
       id="test2"
       invalidText="A valid value is required"
-      labelText="Text Area label"
-      placeholder="Placeholder text."
+      labelText="Text area label"
+      placeholder="Placeholder text"
       rows={4}
     />
     </FormGroup>
