--- a/src/pages/components/text-input/usage.mdx
+++ b/src/pages/components/text-input/usage.mdx
@@ -64,10 +64,10 @@ There are instances, sometimes in the same form, where you need users to enter b
   >{`
     <FormGroup>
       <TextInput
-        helperText="Optional helper text."
+        helperText="Optional helper text"
         id="test2"
         invalidText="A valid value is required"
-        labelText="Text Input label"
+        labelText="Text input label"
         placeholder="Placeholder text"
       />
     </FormGroup>
@@ -86,11 +86,11 @@ There are instances, sometimes in the same form, where you need users to enter b
   >{`
     <FormGroup>
     <TextInput.PasswordInput
-      helperText="Optional helper text."
+      helperText="Optional helper text"
       hidePasswordLabel="Hide password"
       id="test2"
       invalidText="A valid value is required"
-      labelText="Text Input label"
+      labelText="Text input label"
       placeholder="Placeholder text"
       showPasswordLabel="Show password"
     />
@@ -114,11 +114,11 @@ There are instances, sometimes in the same form, where you need users to enter b
     <FormGroup>
     <TextArea
       cols={50}
-      helperText="Optional helper text."
+      helperText="Optional helper text"
       id="test2"
       invalidText="A valid value is required"
-      labelText="Text Area label"
-      placeholder="Placeholder text."
+      labelText="Text area label"
+      placeholder="Placeholder text"
       rows={4}
     />
     </FormGroup>
