--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -86,7 +86,7 @@ When using a call-to-action (CTA) within a tile, use a [secondary button](/compo
     <ClickableTile
       href="#"
     >
-      Clickable Tile
+      Clickable tile
     </ClickableTile>
   `}</ComponentVariant>
   <ComponentVariant
@@ -106,7 +106,7 @@ When using a call-to-action (CTA) within a tile, use a [secondary button](/compo
   >{`
     <TileGroup
       defaultSelected="default-selected"
-      legend="Radio Tile Group"
+      legend="Radio tile group"
       name="tile-group"
     >
       <RadioTile
@@ -115,7 +115,7 @@ When using a call-to-action (CTA) within a tile, use a [secondary button](/compo
         tabIndex={0}
         value="standard"
       >
-        Radio Tile
+        Radio tile
       </RadioTile>
       <RadioTile
         id="tile-2"
@@ -123,7 +123,7 @@ When using a call-to-action (CTA) within a tile, use a [secondary button](/compo
         tabIndex={0}
         value="default-selected"
       >
-        Radio Tile
+        Radio tile
       </RadioTile>
       <RadioTile
         id="tile-3"
@@ -131,7 +131,7 @@ When using a call-to-action (CTA) within a tile, use a [secondary button](/compo
         tabIndex={0}
         value="selected"
       >
-        Radio Tile
+        Radio tile
       </RadioTile>
     </TileGroup>
   `}</ComponentVariant>
@@ -161,7 +161,7 @@ When using a call-to-action (CTA) within a tile, use a [secondary button](/compo
         title="title"
         value="value"
       >
-        Multi-select Tile
+        Multiselect tile
       </SelectableTile>
       <SelectableTile
         id="tile-2"
@@ -170,7 +170,7 @@ When using a call-to-action (CTA) within a tile, use a [secondary button](/compo
         title="title"
         value="value"
       >
-        Multi-select Tile
+        Multiselect tile
       </SelectableTile>
       <SelectableTile
         id="tile-3"
@@ -179,7 +179,7 @@ When using a call-to-action (CTA) within a tile, use a [secondary button](/compo
         title="title"
         value="value"
       >
-        Multi-select Tile
+        Multiselect tile
       </SelectableTile>
     </div>
   `}</ComponentVariant>
