--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -44,7 +44,7 @@ import { Filter16 } from "@carbon/icons-react";
         This is some tooltip text. This box shows the maximum amount of text that should appear inside. If more room is needed please use a modal instead.
       </p>
       <div className="bx--tooltip__footer">
-        <Link href="#">Learn More</Link>
+        <Link href="#">Learn more</Link>
         <Button size="small">
           Create
         </Button>
