--- a/src/pages/components/form/code.mdx
+++ b/src/pages/components/form/code.mdx
@@ -35,7 +35,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
       helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
       id="test2"
       invalidText="Invalid error message."
-      labelText="Text Input label"
+      labelText="Text input label"
       placeholder="Placeholder text"
     />
   </FormGroup>
@@ -45,7 +45,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
     helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
     id="test5"
     invalidText="Invalid error message."
-    labelText="Text Area label"
+    labelText="Text area label"
     placeholder="Placeholder text"
     rows={4}
   />
