--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -63,7 +63,7 @@ Forms are used for submitting data so be as concise as possible when designing. 
       helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
       id="test2"
       invalidText="Invalid error message."
-      labelText="Text Input label"
+      labelText="Text input label"
       placeholder="Placeholder text"
     />
   </FormGroup>
@@ -73,7 +73,7 @@ Forms are used for submitting data so be as concise as possible when designing. 
     helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
     id="test5"
     invalidText="Invalid error message."
-    labelText="Text Area label"
+    labelText="Text area label"
     placeholder="Placeholder text"
     rows={4}
   />
