--- a/src/pages/components/number-input/usage.mdx
+++ b/src/pages/components/number-input/usage.mdx
@@ -50,10 +50,10 @@ Number inputs are similar to text inputs, but contain controls used to increase 
     }}
   >{`
     <NumberInput
-      helperText="Optional helper text."
+      helperText="Optional helper text"
       id="tj-input"
       invalidText="Number is not valid"
-      label="Number Input label"
+      label="Number input label"
       max={100}
       min={0}
       step={10}
@@ -74,10 +74,10 @@ Number inputs are similar to text inputs, but contain controls used to increase 
   >{`
         <NumberInput
           isMobile
-          helperText="Optional helper text."
+          helperText="Optional helper text"
           id="tj-input"
           invalidText="Number is not valid"
-          label="Number Input label"
+          label="Number input label"
           max={100}
           min={0}
           step={10}
