--- a/src/pages/components/slider/code.mdx
+++ b/src/pages/components/slider/code.mdx
@@ -29,7 +29,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
 <Slider
   ariaLabelInput="Label for slider value"
   id="slider"
-  labelText="Slider Label"
+  labelText="Slider label"
   max={100}
   min={0}
   step={1}
