--- a/src/pages/components/slider/usage.mdx
+++ b/src/pages/components/slider/usage.mdx
@@ -71,7 +71,7 @@ The more complex versions should be used for selecting a specific value within a
 <Slider
   ariaLabelInput="Label for slider value"
   id="slider"
-  labelText="Slider Label"
+  labelText="Slider label"
   max={100}
   min={0}
   step={1}
