--- a/src/pages/components/tile/code.mdx
+++ b/src/pages/components/tile/code.mdx
@@ -63,7 +63,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
     <ClickableTile
       href="#"
     >
-      Clickable Tile
+      Clickable tile
     </ClickableTile>
   `}</ComponentVariant>
   <ComponentVariant
@@ -83,7 +83,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
   >{`
     <TileGroup
       defaultSelected="default-selected"
-      legend="Radio Tile Group"
+      legend="Radio tile group"
       name="tile-group"
     >
       <RadioTile
@@ -92,7 +92,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
         tabIndex={0}
         value="standard"
       >
-        Radio Tile
+        Radio tile
       </RadioTile>
       <RadioTile
         id="tile-2"
@@ -100,7 +100,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
         tabIndex={0}
         value="default-selected"
       >
-        Radio Tile
+        Radio tile
       </RadioTile>
       <RadioTile
         id="tile-3"
@@ -108,7 +108,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
         tabIndex={0}
         value="selected"
       >
-        Radio Tile
+        Radio tile
       </RadioTile>
     </TileGroup>
   `}</ComponentVariant>
@@ -138,7 +138,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
         title="title"
         value="value"
       >
-        Multi-select Tile
+        Multiselect tile
       </SelectableTile>
       <SelectableTile
         id="tile-2"
@@ -147,7 +147,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
         title="title"
         value="value"
       >
-        Multi-select Tile
+        Multiselect tile
       </SelectableTile>
       <SelectableTile
         id="tile-3"
@@ -156,7 +156,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
         title="title"
         value="value"
       >
-        Multi-select Tile
+        Multiselect tile
       </SelectableTile>
     </div>
   `}</ComponentVariant>
