--- a/src/pages/tutorial/angular/step-1.mdx
+++ b/src/pages/tutorial/angular/step-1.mdx
@@ -175,7 +175,7 @@ Let's update the UI Shell so it has a link to the repos page that we will create
 ```html path=src/app/header/header.component.html
 <ibm-header [route]="['/']" name="Carbon Tutorial Angular">
   <ibm-header-navigation ariaLabel="Carbon Tutorial Angular">
-    <ibm-header-item [route]="'[/repos']">Repositories</ibm-header-item>
+    <ibm-header-item [route]="['/repos']">Repositories</ibm-header-item>
   </ibm-header-navigation>
   <ibm-header-global>
     <ibm-header-action title="action">
