Docs: component demo content fixes (#1455)
* Docs: demo content fixes

* Update src/pages/components/dropdown/code.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/components/dropdown/code.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/components/dropdown/code.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/components/dropdown/usage.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/components/dropdown/usage.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/components/dropdown/usage.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -94,7 +94,7 @@ There are three different types of dropdowns that support various kinds of funct
       id="carbon-dropdown-example"
       items={items}
       label="Dropdown menu options"
-      titleText="This is a dropdown title."
+      titleText="Dropdown title"
     />
   `}</ComponentVariant>
   <ComponentVariant
@@ -116,8 +116,8 @@ There are three different types of dropdowns that support various kinds of funct
       ariaLabel="ComboBox"
       id="carbon-combobox-example"
       items={items}
-      label="ComboBox menu options"
-      titleText="This is a dropdown title."
+      label="Combo box menu options"
+      titleText="Combo box title"
     />
   `}</ComponentVariant>
   <ComponentVariant
@@ -139,8 +139,8 @@ There are three different types of dropdowns that support various kinds of funct
       ariaLabel="MultiSelect"
       id="carbon-multiselect-example"
       items={items}
-      label="MultiSelect menu options"
-      titleText="This is a dropdown title."
+      label="Multiselect menu options"
+      titleText="Multiselect title"
     />
   `}</ComponentVariant>
   <ComponentVariant
@@ -159,8 +159,8 @@ There are three different types of dropdowns that support various kinds of funct
       ariaLabel="Filterable MultiSelect"
       id="carbon--filterable-multiselect-example"
       items={items}
-      label="Filterable MultiSelect options"
-      titleText="This is a MultiSelect title."
+      label="Filterable multiselect options"
+      titleText="Filterable multiselect title"
     />
  `}</ComponentVariant>
 </ComponentDemo>
