--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -91,7 +91,7 @@ Everything you need to work with, learn about, and contribute to Carbon.
     href="http://react.carbondesignsystem.com/"
     >
 
-![](images/react-icon.png)
+<MdxIcon name="react" />
 
   </ResourceCard>
 </Column>
@@ -101,7 +101,17 @@ Everything you need to work with, learn about, and contribute to Carbon.
       href="http://vue.carbondesignsystem.com/"
       >
 
-![](images/vue-icon.png)
+<MdxIcon name="vue" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Carbon Components Angular Storybook"
+      href="http://angular.carbondesignsystem.com/"
+      >
+
+<MdxIcon name="angular" />
 
   </ResourceCard>
 </Column>
