chore: update links

--- a/src/pages/components/accordion/code.mdx
+++ b/src/pages/components/accordion/code.mdx
@@ -17,7 +17,7 @@ Live demo for our accordion using React. For detailed code usage documentation p
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="Carbon React Storybook"
-    href="http://react.carbondesignsystem.com/"
+    href="http://react.carbondesignsystem.com/?path=/story/accordion--default"
     >
 
 <MdxIcon name="react" />
@@ -27,7 +27,7 @@ Live demo for our accordion using React. For detailed code usage documentation p
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
       subTitle="Carbon Components Angular Storybook"
-      href="http://angular.carbondesignsystem.com/"
+      href="https://angular.carbondesignsystem.com/?path=/story/components-accordion--basic"
       >
 
 <MdxIcon name="angular" />
@@ -37,7 +37,7 @@ Live demo for our accordion using React. For detailed code usage documentation p
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
       subTitle="Carbon Components Vue Storybook"
-      href="http://vue.carbondesignsystem.com/"
+      href="http://vue.carbondesignsystem.com/?path=/story/components-cvaccordion--default"
       >
 
 <MdxIcon name="vue" />
