--- a/src/pages/components/accordion/code.mdx
+++ b/src/pages/components/accordion/code.mdx
@@ -9,16 +9,16 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
 
 <PageDescription>
 
-Live demo for our accordion using React. For detailed code usage documentation please follow the storybook links for each framework below.
+Live demo for our accordion using React. For detailed code usage documentation please follow the documentation links for each framework below.
 
 </PageDescription>
 
-## Storybooks
+## Documentation
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon React Storybook"
+    subTitle="React"
     href="http://react.carbondesignsystem.com/?path=/story/accordion--default"
     >
 
@@ -28,7 +28,7 @@ Live demo for our accordion using React. For detailed code usage documentation p
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-      subTitle="Carbon Components Angular Storybook"
+      subTitle="Angular (Community)"
       href="https://angular.carbondesignsystem.com/?path=/story/components-accordion--basic"
       >
 
@@ -38,7 +38,7 @@ Live demo for our accordion using React. For detailed code usage documentation p
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-      subTitle="Carbon Components Vue Storybook"
+      subTitle="Vue (Community)"
       href="http://vue.carbondesignsystem.com/?path=/story/components-cvaccordion--default"
       >
 
