--- a/src/pages/components/accordion/code.mdx
+++ b/src/pages/components/accordion/code.mdx
@@ -9,7 +9,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
 
 <PageDescription>
 
-Live demo for our accordion using React. For detailed code usage documentation please follow the documentation links for each framework below.
+Preview the accordion component with the React live demo. For detailed code usage documentation, see the Storybooks for each framework below.
 
 </PageDescription>
 
