chore: typo on resources page

--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -97,7 +97,7 @@ Everything you need to work with, learn about, and contribute to Carbon.
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-      subTitle="Carbon Components Vue Storybook"
+      subTitle="Carbon Vue Storybook"
       href="http://vue.carbondesignsystem.com/"
       >
 
@@ -107,7 +107,7 @@ Everything you need to work with, learn about, and contribute to Carbon.
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-      subTitle="Carbon Components Angular Storybook"
+      subTitle="Carbon Angular Storybook"
       href="http://angular.carbondesignsystem.com/"
       >
 
